fix done status on question cards, update spacing and class names, add background white to secondary button

--- a/web/src/styles/common.scss
+++ b/web/src/styles/common.scss
@@ -149,7 +149,7 @@ button, a.button {
   }
 
   &.secondary {
-    background-color: transparent;
+    background-color: $white;
     border: 1px solid $lightGreen;
     box-shadow: none;
     color: $darkGreen;
