--- a/web/src/styles/journal.scss
+++ b/web/src/styles/journal.scss
@@ -49,7 +49,7 @@
         width: 28rem;
     }
 
-    .old & {
+    .hasNote & {
         display: none;
 
         @include r(600) {
@@ -126,13 +126,9 @@
   }
 }
 
-.topic {
-  margin-bottom: .8rem;
-}
-
 .date {
   font-size: 1.6rem;
-  margin: .8rem 0;
+  margin: .8rem 0 1.6rem;
   opacity: .8;
   display: flex;
 }
@@ -170,7 +166,7 @@
         }
     }
 
-    .old & {
+    .hasNote & {
         @include r(600) {
             max-width: none;
         }
@@ -245,7 +241,7 @@ button, a.button {
 .doneStatus {
   background-color: $lightGreen;
   border-radius: 2rem;
-  color: $darkGreen;
+  color: $darkestGreen;
   display: inline-block;
   font-size: 1.4rem;
   font-weight: bold;
